--- a/HTML-CSS/20230303/002.html
+++ b/HTML-CSS/20230303/002.html
@@ -4,64 +4,47 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>나의 슬로건</title>
+    <title>말줄임처리</title>
     <style>
-      @font-face {
-        font-family: "KCCChassam";
-        src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2302@1.0/KCCChassam.woff2")
-          format("woff2");
-        font-weight: normal;
-        font-style: normal;
-      }
-
-      @font-face {
-        font-family: "YiSunShinRegular";
-        src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/YiSunShinRegular.woff")
-          format("woff");
-        font-weight: normal;
-        font-style: normal;
-      }
-
-      div {
-        width: 600px;
-        height: 200px;
-        border: 2px solid rgb(49, 30, 30);
-        background: rgb(231, 192, 165);
-        margin-top: 40px;
-      }
-
-      h1{
-        font-family: "KCCChassam";
-        text-indent: 10px;   
-        line-height: 10px;
-        text-align: center;
-        padding-bottom: 20px;
-      }
-
       p {
-        font-family: "YiSunShinRegular";
-        font-size: 1.6rem;
-      }
-      .quotes {
-        text-align: center;
-        text-shadow: 1px 1px 1px, 2px 2px 1px, 2px -1px 1px rgb(19, 2, 2);
+        /* width: 400px; */
+        border: 2px solid #ccc;
       }
 
-      .name-tag {
-        font-weight: bold;
-        text-align: right;
-        font-size: 1.4rem;
-        padding-top: 20px;
-        padding-right: 20px;
-        text-shadow: 1px 1px 1px;
+      .ellipsis {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+
+      .multi-ellipsis {
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 3;
       }
     </style>
   </head>
+
   <body>
-    <div>
-      <h1>내가 좋아하는 명언</h1>
-      <p class="quotes">" 죽고자 하면 살 것이오, 살고자 하면 죽을 것이다. "</p>
-      <p class="name-tag">이순신(1545~1598)</p>
-    </div>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste ducimus
+      sapiente quidem! Velit et officia, temporibus ad natus quo. Quae at
+      similique deserunt modi minima ipsum debitis blanditiis ipsa facere!
+    </p>
+
+    <p class="ellipsis">Lorem ipsum dolor sit</p>
+
+    <p class="ellipsis">
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste ducimus
+      sapiente quidem! Velit et officia, temporibus ad natus quo. Quae at
+      similique deserunt modi minima ipsum debitis blanditiis ipsa facere!
+    </p>
+
+    <p class="multi-ellipsis">
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste ducimus
+      sapiente quidem! Velit et officia, temporibus ad natus quo. Quae at
+      similique deserunt modi minima ipsum debitis blanditiis ipsa facere!
+    </p>
   </body>
 </html>
