--- a/diary/login.html
+++ b/diary/login.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>로그인 | 두근두근 비밀일기</title>
-    <link rel="stylesheet" href="./style/header.css" />
-    <link rel="stylesheet" href="./style/style.css" />
+    <link rel="stylesheet" href="./style/login.css" />
+    <link rel="stylesheet" href="./style/common.css" />
   </head>
   <body>
     <header>
@@ -18,11 +18,11 @@
       </div>
     </header>
 
-    <main class="login-wrapper">
-      <a>
+    <main>
+      <h1>
         <img src="/diary/img/logo.svg" alt="두근두근 비밀일기" />
-      </a>
-      <h1><strong> 로그인 </strong></h1>
+        <strong> 로그인 </strong>
+      </h1>
       <form class="login">
         <label for="user-email">아이디</label>
         <input id="user-email" type="email" required />
@@ -30,7 +30,7 @@
         <label for="user-pw">비밀번호</label>
         <input id="user-pw" type="password" required />
 
-        <button type="submit" disabled>로그인</button>
+        <button type="submit">로그인</button>
       </form>
     </main>
     <footer><p>Copyright 2023. WENIV All rights reserved.</p></footer>
