20230315 수업 반응형웹

--- a/diary/common.html
+++ b/diary/common.html
@@ -15,10 +15,15 @@
     <button class="black-btn" type="submit">로그인</button>
     <button class="black-btn" type="submit" disabled>로그인</button>
 
-    <label class="label-style" for="user-email">아이디</label>
+    <label class="label-style" for="user-email">이메일</label>
     <input class="input-style" id="user-email" type="email" required />
 
     <label class="label-style" for="user-pw">비밀번호</label>
     <input class="input-style" id="user-pw" type="password" required />
+
+    <h2 class="img-title">
+      <img src="img/logo.svg" alt="" />
+      <strong class="line">로그인</strong>
+    </h2>
   </body>
 </html>
