--- a/HTML-CSS/diary/main.html
+++ b/HTML-CSS/diary/main.html
@@ -37,7 +37,7 @@
             placeholder="제목"
             required
           />
-
+          <label class="a11y-hidden" for="diary-textarea">내용</label>
           <textarea
             class="diary-textarea"
             placeholder="오늘의 비밀은 무엇인가요?"
