하트 애니메이션 추가

--- a/HTML-CSS/diary/main.html
+++ b/HTML-CSS/diary/main.html
@@ -37,10 +37,11 @@
             placeholder="제목"
             required
           />
-          <label class="a11y-hidden" for="diary-textarea">내용</label>
+          <label class="a11y-hidden" for="diary-content">내용</label>
           <textarea
             class="diary-textarea"
             placeholder="오늘의 비밀은 무엇인가요?"
+            id="diary-content"
           ></textarea>
           <button class="black-btn" type="submit">작성하기</button>
         </form>
