--- a/diary/main.html
+++ b/diary/main.html
@@ -10,11 +10,11 @@
   <link rel="stylesheet" href="./style/main.css" />
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
-  <link rel="canonical" href="https://astinaus.github.io/FE5/HTML-CSS/diary/main.html"/>
+  <link rel="canonical" href="https://astinaus.github.io/FE5/diary/main.html"/>
   <meta name="description" content="나만의 비밀일기를 작성해 보세요.">
   <meta property="og:title" content="두근두근 비밀일기" />
   <meta property="og:type" content="Website" />
-  <meta property="og:url" content="https://astinaus.github.io/FE5/HTML-CSS/diary/main.html" />
+  <meta property="og:url" content="https://astinaus.github.io/FE5/diary/main.html" />
   <meta property="og:image" content="./img/meta.png" />
   <meta property="og:description" content="나만의 비밀일기를 작성해 보세요." />
 
