--- a/diary/join.html
+++ b/diary/join.html
@@ -10,16 +10,16 @@
   <link rel="stylesheet" href="./style/login.css" />
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
-  <link rel="canonical" href="https://astinaus.github.io/FE5/diary/main.html"/>
+  <link rel="canonical" href="https://astinaus.github.io/FE5/diary/join.html"/>
   <meta name="description" content="나만의 비밀일기를 작성해 보세요.">
-  <meta property="og:title" content="두근두근 비밀일기" />
+  <meta property="og:title" content="회원가입 | 두근두근 비밀일기" />
   <meta property="og:type" content="Website" />
-  <meta property="og:url" content="https://astinaus.github.io/FE5/diary/main.html" />
+  <meta property="og:url" content="https://astinaus.github.io/FE5/diary/join.html" />
   <meta property="og:image" content="./img/meta.png" />
   <meta property="og:description" content="나만의 비밀일기를 작성해 보세요." />
 
   <meta name="twitter:card" content="twitter:card">
-  <meta name="twitter:title" content="두근두근 비밀일기">
+  <meta name="twitter:title" content="회원가입 | 두근두근 비밀일기">
   <meta name="twitter:description" content="나만의 비밀일기를 작성해 보세요.">
   <meta name="twitter:image" content="./img/meta.png">
 </head>
