--- a/diary/join.html
+++ b/diary/join.html
@@ -28,10 +28,10 @@
   <header>
     <div class="header-wrap">
       <h1>
-        <a href="#"><img class="logo" src="img/logo.svg" alt="두근두근 비밀일기" /></a>
+        <a href="./index.html"><img class="logo" src="img/logo.svg" alt="두근두근 비밀일기" /></a>
       </h1>
       <div>
-        <a href="#" class="btn-login">로그인</a>
+        <a href="./index.html" class="btn-login">로그인</a>
       </div>
     </div>
   </header>
