--- a/HTML-CSS/20230320/cinema/index.html
+++ b/HTML-CSS/20230320/cinema/index.html
@@ -195,7 +195,39 @@
         </main>
     </div>
     <footer>
-
+        <div class="wrapper foot">
+            <div class="footer-top">
+                <h2>Jungle Cinema</h2>
+                <ul class="sns">
+                    <li><a href="https://twitter.com" target="_blank">
+                            <img src="./images/icon-twitter.png" alt="트위터로 이동">
+                        </a></li>
+                    <li><a href="https://instagram.com" target="_blank">
+                            <img src="./images/icon-instagram.png" alt="인스타그램으로 이동">
+                        </a></li>
+                    <li><a href="https://facebook.com" target="_blank">
+                            <img src="./images/icon-facebook.png" alt="페이스북으로 이동">
+                        </a></li>
+                </ul>
+            </div>
+            <div class="footer-bottom">
+                <ul class="info">
+                    <li><span class="bold">(주) 정글 시네마</span></li>
+                    <li><span class="bold">대표</span>
+                        <span>라이언</span>
+                    </li>
+                    <li><span class="bold">사업자 번호</span>
+                        <span>000-0000-0000</span>
+                    </li>
+                    <li><span>광고 영화 및 비디오물 제작업</span>
+                    </li>
+                    <li><span class="bold">주소</span>
+                        <span>서울특별시</span>
+                    </li>
+                </ul>
+                <p class="copyright">The Jungle</p>
+            </div>
+        </div>
     </footer>
 </body>
 
