로그인 폼 구성 완료

--- a/HTML-CSS/20230322/login.html
+++ b/HTML-CSS/20230322/login.html
@@ -11,7 +11,7 @@
 
 <body>
     <article class="modal-wrapper">
-        <h2>로그인 또는 회원가입</h2>
+        <h1>로그인 또는 회원가입</h1>
         <section class="login">
             <h2>위니브에서 여러분의 궁금증을 해결하세요! :)</h2>
             <form class="form-login">
@@ -33,24 +33,26 @@
                 <button type="button" class="btn-login">로그인</button>
             </form>
         </section>
-        <div class="join-find">
-            <a href="#">회원가입</a>
-            <a href="#">아이디/비밀번호 찾기</a>
+        <div class="link">
+            <a href="#" class="link-join">회원가입</a>
+            <a href="#" class="link-find">아이디/비밀번호 찾기</a>
         </div>
-        <ul class="sns-login">
-            <li>
-                <button type="button">구글 계정으로 로그인</button>
-            </li>
-            <li>
-                <button type="button">페이스북 계정으로 로그인</button>
-            </li>
-            <li>
-                <button type="button">네이버 계정으로 로그인</button>
-            </li>
-            <li>
-                <button type="button">카카오톡 계정으로 로그인</button>
-            </li>
-        </ul>
+        <div class="sns-login">
+            <ul class="sns-lists">
+                <li>
+                    <button type="button" class="sns-login-btn google">구글 계정으로 로그인</button>
+                </li>
+                <li>
+                    <button type="button" class="sns-login-btn facebook">페이스북 계정으로 로그인</button>
+                </li>
+                <li>
+                    <button type="button" class="sns-login-btn naver">네이버 계정으로 로그인</button>
+                </li>
+                <li>
+                    <button type="button" class="sns-login-btn kakao">카카오톡 계정으로 로그인</button>
+                </li>
+            </ul>
+        </div>
     </article>
 </body>
 
