--- a/HTML-CSS/20230322/login.html
+++ b/HTML-CSS/20230322/login.html
@@ -14,7 +14,7 @@
         <h1>로그인 또는 회원가입</h1>
         <section class="login">
             <h2>위니브에서 여러분의 궁금증을 해결하세요! :)</h2>
-            <form class="form-login">
+            <form action="" class="form-login">
                 <fieldset>
                     <input type="email" id="email" required class="input-id" placeholder="아이디">
                     <label class="txt-hide" for="email">아이디</label>
