--- a/JavaScript/20230403/006_단락회로평가.html
+++ b/JavaScript/20230403/006_단락회로평가.html
@@ -25,9 +25,9 @@
 
         console.log('abc' / 2) // NaN
 
-        console.log(!!NaN)
-        console.log(!!undefined)
-        console.log(!!null)
+        console.log(!!NaN) // false
+        console.log(!!undefined) // false
+        console.log(!!null) // false
 
         let username = "";
         username = username || "무명"
