20230405 스프라이트기법

--- a/HTML-CSS/20230322/login.html
+++ b/HTML-CSS/20230322/login.html
@@ -30,7 +30,7 @@
                 <input type="checkbox" id="login-hold" class="input-chk txt-hide">
                 <label for="login-hold" class="chk-label">로그인 상태 유지</label>
 
-                <button type="button" class="btn-login">로그인</button>
+                <button type="submit" class="btn-login">로그인</button>
             </form>
         </section>
         <div class="link">
@@ -53,6 +53,10 @@
                 </li>
             </ul>
         </div>
+        <a class="modal-close" href="#">
+            <strong class="txt-hide">닫기</strong>
+            <img src="./img/close.svg" alt="로그인 창 닫기 버튼">
+        </a>
     </article>
 </body>
 
