캐러셀 수정정

--- a/JavaScript/20230418/carousel.html
+++ b/JavaScript/20230418/carousel.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <div class="left"></div>
-    <div class="right"></div>
+    <div id="left"></div>
+    <div id="right"></div>
     <article id="app">
         <h2>캐러셀</h2>
         <ul class="list-item">
