--- a/JavaScript/20230418/carousel.html
+++ b/JavaScript/20230418/carousel.html
@@ -14,29 +14,7 @@
     <div id="right"></div>
     <article id="app">
         <h2>캐러셀</h2>
-        <ul class="list-item">
-            <li>
-                <img src="./img/팬더.png" alt="">
-            </li>
-            <li>
-                <img src="./img/알파카.png" alt="">
-            </li>
-            <li>
-                <img src="./img/병아리.png" alt="">
-            </li>
-            <li>
-                <img src="./img/수달.png" alt="">
-            </li>
-            <li>
-                <img src="./img/햄스터.png" alt="">
-            </li>
-            <li>
-                <img src="./img/카톡개.png" alt="">
-            </li>
-            <li>
-                <img src="./img/토끼.png" alt="">
-            </li>
-        </ul>
+        <ul class="list-item"></ul>
     </article>
 
     <script src="script.js"></script>
