--- a/JavaScript/20230427/vending-machine/index.html
+++ b/JavaScript/20230427/vending-machine/index.html
@@ -60,7 +60,7 @@
         <section class="section3">
             <h2 class="get-title">획득한 음료</h2>
             <ul class="get-list">
-                <li><img src="./img/cola-original.png" alt="">Original_Cola<img>
+                <!-- <li><img src="./img/cola-original.png" alt="">Original_Cola<img>
                     <strong>1
                         <span class="a11y-hidden">개</span>
                     </strong>
@@ -79,9 +79,9 @@
                     <strong>5
                         <span class="a11y-hidden">개</span>
                     </strong>
-                </li>
+                </li> -->
             </ul>
-            <p class="total-price">총금액 : 9,000원</p>
+            <p class="total-price">총 금액 : 0 원</p>
         </section>
     </main>
 
