--- a/React/20230502/007.html
+++ b/React/20230502/007.html
@@ -35,8 +35,8 @@
                     {product.map((item) => (
                         <div key={item.id}>
                             <img src={'http://test.api.weniv.co.kr/' + item.thumbnailImg} alt={item.productName} />
-                            <p>{item.productName}</p>
-                            <p>{item.price}원</p>
+                            <h3>{item.productName}</h3>
+                            <strong>{item.price}원</strong>
                         </div>
                     ))}
                 </div>
